--- a/src/Components/Transaction/Transactions.css
+++ b/src/Components/Transaction/Transactions.css
@@ -27,9 +27,9 @@ table, th, td {
   .customers tr:hover {background-color: #ddd;}
   
   .customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding: 15px;
     text-align: left;
     background-color: #06b1c0;
     color: white;
+    text-align: center;
   }
